front fix a11y issues

--- a/packages/pentatrion-design/components/tabs/Tabs.scss
+++ b/packages/pentatrion-design/components/tabs/Tabs.scss
@@ -6,6 +6,10 @@
     .tabs-list {
         display: flex;
 
+        button:focus-visible {
+            outline: 2px solid var(--button-focus-visible-border-color);
+        }
+
         &.full-width .tabs-list-item {
             text-align: center;
             flex: 1 1 0;
