performance issues with IGN routing -> revert with OpenRouteService

--- a/packages/pentatrion-design/components/quick-settings/QuickSettings.scss
+++ b/packages/pentatrion-design/components/quick-settings/QuickSettings.scss
@@ -23,6 +23,10 @@
         }
     }
 
+    .two-cols .setting>:nth-child(2) {
+        min-width: auto;
+    }
+
     .actions {
         display: flex;
         gap: .5rem;
