--- a/packages/pentatrion-fonts/fontello-lonlat.css
+++ b/packages/pentatrion-fonts/fontello-lonlat.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello-lonlat/fontello.eot?17217203');
-  src: url('./dist/fontello-lonlat/fontello.eot?17217203#iefix') format('embedded-opentype'),
-       url('./dist/fontello-lonlat/fontello.woff2?17217203') format('woff2'),
-       url('./dist/fontello-lonlat/fontello.woff?17217203') format('woff'),
-       url('./dist/fontello-lonlat/fontello.ttf?17217203') format('truetype'),
-       url('./dist/fontello-lonlat/fontello.svg?17217203#fontello') format('svg');
+  src: url('./dist/fontello-lonlat/fontello.eot?80141954');
+  src: url('./dist/fontello-lonlat/fontello.eot?80141954#iefix') format('embedded-opentype'),
+       url('./dist/fontello-lonlat/fontello.woff2?80141954') format('woff2'),
+       url('./dist/fontello-lonlat/fontello.woff?80141954') format('woff'),
+       url('./dist/fontello-lonlat/fontello.ttf?80141954') format('truetype'),
+       url('./dist/fontello-lonlat/fontello.svg?80141954#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello-lonlat/fontello.svg?17217203#fontello') format('svg');
+    src: url('./dist/fontello-lonlat/fontello.svg?80141954#fontello') format('svg');
   }
 }
 */
@@ -101,9 +101,11 @@
 .fe-person-walking:before { content: '\e82c'; } /* '' */
 .fe-car:before { content: '\e82d'; } /* '' */
 .fe-settings:before { content: '\e82e'; } /* '' */
+.fe-person-biking:before { content: '\e82f'; } /* '' */
 .fe-vector:before { content: '\f045'; } /* '' */
 .fe-menu:before { content: '\f0c9'; } /* '' */
 .fe-exchange:before { content: '\f0ec'; } /* '' */
 .fe-code:before { content: '\f121'; } /* '' */
 .fe-star-half:before { content: '\f123'; } /* '' */
 .fe-history:before { content: '\f1da'; } /* '' */
+.fe-sliders:before { content: '\f1de'; } /* '' */
