--- a/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
+++ b/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
@@ -44,6 +44,32 @@
         position: relative;
         color: var(--text-default);
 
+        @media (max-width: 700px) {
+            &.principal {
+                padding: .25rem;
+
+                width: 3.5rem;
+                height: 3.5rem;
+                flex: 0 0 3.5rem;
+
+                .preview-container {
+                    width: 100%;
+                    height: 100%;
+                    overflow: hidden;
+                }
+
+                .preview {
+                    width: 90px;
+                    height: 54px;
+                    max-width: none;
+                }
+
+                .legend {
+                    display: none;
+                }
+            }
+        }
+
         &.base {
             &:hover {
                 background-color: var(--color-primary);
