--- a/packages/pentatrion-geo/src/default.scss
+++ b/packages/pentatrion-geo/src/default.scss
@@ -1,2 +1,3 @@
 @import "./components/layer-switcher/LayerSwitcher";
 @import "./components/geo-tabs/GeoTabs.scss";
+@import "./components/dialog/Dialog.scss";
