--- a/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
+++ b/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
@@ -44,6 +44,10 @@
         position: relative;
         color: var(--text-default);
 
+        .preview-container {
+            width: 100%;
+        }
+
         @media (max-width: 700px) {
             &.principal {
                 padding: .25rem;
@@ -53,7 +57,6 @@
                 flex: 0 0 3.5rem;
 
                 .preview-container {
-                    width: 100%;
                     height: 100%;
                     overflow: hidden;
                 }
