--- a/apps/front/src/App.scss
+++ b/apps/front/src/App.scss
@@ -40,3 +40,8 @@ html {
         border-top: 1px solid var(--background-strong);
     }
 }
+
+.ll-marker .marker .text {
+    font-weight: 600;
+    font-size: max(10px, var(--marker-size) * 0.3);
+}
