--- a/apps/front/src/css/ctrl/attrib.scss
+++ b/apps/front/src/css/ctrl/attrib.scss
@@ -1,7 +1,9 @@
-.maplibregl-ctrl.maplibregl-ctrl-attrib {
-    background-color: hsla(0, 0%, 100%, .5);
-    margin: 0;
-    padding: 0 5px
+.ll-layer-switcher-expanded .maplibregl-ctrl.maplibregl-ctrl-attrib {
+    visibility: hidden;
+}
+
+.maplibregl-attrib-empty {
+    display: none
 }
 
 details.maplibregl-ctrl.maplibregl-ctrl-attrib {
@@ -14,14 +16,12 @@ details.maplibregl-ctrl.maplibregl-ctrl-attrib {
 
 @media screen {
     .maplibregl-ctrl-attrib.maplibregl-compact {
-        background-color: #fff;
-        border-radius: 12px;
+        background-color: white;
+        border-radius: 14px;
         box-sizing: content-box;
         color: #000;
-        /* margin: 10px; */
         min-height: 24px;
-        padding: 2px 24px 2px 0;
-        /* position: relative */
+        padding: 2px 28px 2px 0;
     }
 
     .maplibregl-ctrl-attrib.maplibregl-compact-show {
@@ -40,7 +40,6 @@ details.maplibregl-ctrl.maplibregl-ctrl-attrib {
     }
 
     .maplibregl-ctrl-attrib-button {
-        background-color: hsla(0, 0%, 100%, .5);
         background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill-rule='evenodd' viewBox='0 0 20 20'%3E%3Cpath d='M4 10a6 6 0 1 0 12 0 6 6 0 1 0-12 0m5-3a1 1 0 1 0 2 0 1 1 0 1 0-2 0m0 3a1 1 0 1 1 2 0v3a1 1 0 1 1-2 0'/%3E%3C/svg%3E");
         border: 0;
         border-radius: 12px;
@@ -66,18 +65,16 @@ details.maplibregl-ctrl.maplibregl-ctrl-attrib {
         display: none
     }
 
-    .maplibregl-ctrl-bottom-left .maplibregl-ctrl-attrib-button,
-    .maplibregl-ctrl-top-left .maplibregl-ctrl-attrib-button {
-        left: 0
-    }
 
     .maplibregl-ctrl-attrib.maplibregl-compact .maplibregl-ctrl-attrib-button,
     .maplibregl-ctrl-attrib.maplibregl-compact-show .maplibregl-ctrl-attrib-inner {
         display: block
     }
 
-    .maplibregl-ctrl-attrib.maplibregl-compact-show .maplibregl-ctrl-attrib-button {
-        background-color: rgb(0 0 0/5%)
+
+    .maplibregl-ctrl-bottom-left .maplibregl-ctrl-attrib-button,
+    .maplibregl-ctrl-top-left .maplibregl-ctrl-attrib-button {
+        left: 0
     }
 
     .maplibregl-ctrl-bottom-right>.maplibregl-ctrl-attrib.maplibregl-compact:after {
@@ -111,10 +108,4 @@ details.maplibregl-ctrl.maplibregl-ctrl-attrib {
     .maplibregl-ctrl-attrib.maplibregl-compact:after {
         background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill-rule='evenodd' viewBox='0 0 20 20'%3E%3Cpath d='M4 10a6 6 0 1 0 12 0 6 6 0 1 0-12 0m5-3a1 1 0 1 0 2 0 1 1 0 1 0-2 0m0 3a1 1 0 1 1 2 0v3a1 1 0 1 1-2 0'/%3E%3C/svg%3E")
     }
-}
-
-
-
-.maplibregl-attrib-empty {
-    display: none
 }
