--- a/apps/maplibre-react-sandbox/src/custom-04-direction/App.scss
+++ b/apps/maplibre-react-sandbox/src/custom-04-direction/App.scss
@@ -22,6 +22,13 @@ body,
     }
 }
 
+@media (max-width: 768px) {
+    .sidebar {
+        width: auto;
+        left: 0;
+    }
+}
+
 .maplibregl-map .maplibregl-canvas-container.maplibregl-interactive {
     cursor: pointer;
 }
