geolocation add accuracy circle and mapFlyer implementation

--- a/apps/front/src/TabsControl.scss
+++ b/apps/front/src/TabsControl.scss
@@ -46,6 +46,10 @@
             max-width: none;
         }
     }
+
+    .ll-textarea.raw {
+        min-height: 15rem;
+    }
 }
 
 .maplibregl-ctrl-top-right {
