--- a/packages/pentatrion-fonts/fontello-lonlat.css
+++ b/packages/pentatrion-fonts/fontello-lonlat.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello-lonlat/fontello.eot?19553250');
-  src: url('./dist/fontello-lonlat/fontello.eot?19553250#iefix') format('embedded-opentype'),
-       url('./dist/fontello-lonlat/fontello.woff2?19553250') format('woff2'),
-       url('./dist/fontello-lonlat/fontello.woff?19553250') format('woff'),
-       url('./dist/fontello-lonlat/fontello.ttf?19553250') format('truetype'),
-       url('./dist/fontello-lonlat/fontello.svg?19553250#fontello') format('svg');
+  src: url('./dist/fontello-lonlat/fontello.eot?77562244');
+  src: url('./dist/fontello-lonlat/fontello.eot?77562244#iefix') format('embedded-opentype'),
+       url('./dist/fontello-lonlat/fontello.woff2?77562244') format('woff2'),
+       url('./dist/fontello-lonlat/fontello.woff?77562244') format('woff'),
+       url('./dist/fontello-lonlat/fontello.ttf?77562244') format('truetype'),
+       url('./dist/fontello-lonlat/fontello.svg?77562244#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello-lonlat/fontello.svg?19553250#fontello') format('svg');
+    src: url('./dist/fontello-lonlat/fontello.svg?77562244#fontello') format('svg');
   }
 }
 */
@@ -74,7 +74,7 @@
 .fe-housenumber:before { content: '\e811'; } /* '' */
 .fe-route:before { content: '\e812'; } /* '' */
 .fe-lake:before { content: '\e813'; } /* '' */
-.fe-locate:before { content: '\e814'; } /* '' */
+.fe-geolocation:before { content: '\e814'; } /* '' */
 .fe-marker:before { content: '\e815'; } /* '' */
 .fe-angle-left:before { content: '\e816'; } /* '' */
 .fe-angle-right:before { content: '\e817'; } /* '' */
