--- a/apps/front/src/TabsControl.scss
+++ b/apps/front/src/TabsControl.scss
@@ -63,6 +63,10 @@
             &.distraction-free {
                 transform: translateX(100%);
             }
+
+            .ll-tabs {
+                border-radius: 0;
+            }
         }
     }
 }
