--- a/packages/pentatrion-fonts/fontello-lonlat.css
+++ b/packages/pentatrion-fonts/fontello-lonlat.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello-lonlat/fontello.eot?77562244');
-  src: url('./dist/fontello-lonlat/fontello.eot?77562244#iefix') format('embedded-opentype'),
-       url('./dist/fontello-lonlat/fontello.woff2?77562244') format('woff2'),
-       url('./dist/fontello-lonlat/fontello.woff?77562244') format('woff'),
-       url('./dist/fontello-lonlat/fontello.ttf?77562244') format('truetype'),
-       url('./dist/fontello-lonlat/fontello.svg?77562244#fontello') format('svg');
+  src: url('./dist/fontello-lonlat/fontello.eot?66065843');
+  src: url('./dist/fontello-lonlat/fontello.eot?66065843#iefix') format('embedded-opentype'),
+       url('./dist/fontello-lonlat/fontello.woff2?66065843') format('woff2'),
+       url('./dist/fontello-lonlat/fontello.woff?66065843') format('woff'),
+       url('./dist/fontello-lonlat/fontello.ttf?66065843') format('truetype'),
+       url('./dist/fontello-lonlat/fontello.svg?66065843#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello-lonlat/fontello.svg?77562244#fontello') format('svg');
+    src: url('./dist/fontello-lonlat/fontello.svg?66065843#fontello') format('svg');
   }
 }
 */
@@ -119,6 +119,7 @@
 .fe-vector:before { content: '\f045'; } /* '' */
 .fe-code:before { content: '\f121'; } /* '' */
 .fe-star-half:before { content: '\f123'; } /* '' */
+.fe-info:before { content: '\f129'; } /* '' */
 .fe-history:before { content: '\f1da'; } /* '' */
 .fe-sliders:before { content: '\f1de'; } /* '' */
 .fe-trash:before { content: '\f1f8'; } /* '' */
