--- a/packages/pentatrion-fonts/fontello-lonlat.css
+++ b/packages/pentatrion-fonts/fontello-lonlat.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello-lonlat/fontello.eot?66065843');
-  src: url('./dist/fontello-lonlat/fontello.eot?66065843#iefix') format('embedded-opentype'),
-       url('./dist/fontello-lonlat/fontello.woff2?66065843') format('woff2'),
-       url('./dist/fontello-lonlat/fontello.woff?66065843') format('woff'),
-       url('./dist/fontello-lonlat/fontello.ttf?66065843') format('truetype'),
-       url('./dist/fontello-lonlat/fontello.svg?66065843#fontello') format('svg');
+  src: url('./dist/fontello-lonlat/fontello.eot?70197630');
+  src: url('./dist/fontello-lonlat/fontello.eot?70197630#iefix') format('embedded-opentype'),
+       url('./dist/fontello-lonlat/fontello.woff2?70197630') format('woff2'),
+       url('./dist/fontello-lonlat/fontello.woff?70197630') format('woff'),
+       url('./dist/fontello-lonlat/fontello.ttf?70197630') format('truetype'),
+       url('./dist/fontello-lonlat/fontello.svg?70197630#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello-lonlat/fontello.svg?66065843#fontello') format('svg');
+    src: url('./dist/fontello-lonlat/fontello.svg?70197630#fontello') format('svg');
   }
 }
 */
@@ -116,6 +116,7 @@
 .fe-waterpoint:before { content: '\e83b'; } /* '' */
 .fe-weather_station:before { content: '\e83c'; } /* '' */
 .fe-webcam:before { content: '\e83d'; } /* '' */
+.fe-unknown:before { content: '\e83e'; } /* '' */
 .fe-vector:before { content: '\f045'; } /* '' */
 .fe-code:before { content: '\f121'; } /* '' */
 .fe-star-half:before { content: '\f123'; } /* '' */
