--- a/apps/front/src/css/ctrl/_layout.scss
+++ b/apps/front/src/css/ctrl/_layout.scss
@@ -74,16 +74,10 @@
 }
 
 .maplibregl-ctrl-group {
-    background: #fff;
-    border-radius: 4px
+    background: var(--background-default);
+    border-radius: var(--border-radius-sm);
 }
 
 .maplibregl-ctrl-group:not(:empty) {
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, .1)
-}
-
-@media (-ms-high-contrast:active) {
-    .maplibregl-ctrl-group:not(:empty) {
-        box-shadow: 0 0 0 2px ButtonText
-    }
+    box-shadow: var(--shadow-light);
 }
