--- a/packages/pentatrion-geo/src/default.scss
+++ b/packages/pentatrion-geo/src/default.scss
@@ -1,2 +1,4 @@
-@import "./components/layer-switcher/LayerSwitcher";
 @import "./components/dialog/Dialog.scss";
+@import "./components/layer-switcher/LayerSwitcher.scss";
+@import "./maplibre/LLMarker.scss";
+@import "./maplibre/LLPopup.scss";
