--- a/apps/front/src/TabsControl.scss
+++ b/apps/front/src/TabsControl.scss
@@ -1,11 +1,4 @@
 .maplibregl-ctrl-tabs {
-    width: 380px;
-    position: relative;
-    transition: transform .3s ease;
-
-    &.distraction-free {
-        transform: translateX(calc(100% + .5rem));
-    }
 
     .tabs-list {
         .tabs-list-item button {
@@ -18,9 +11,8 @@
         overflow: auto;
     }
 
-    .ll-quick-settings .actions>.help {
-        width: 34px;
-        flex: 0 0 34px;
+    .ll-quick-settings {
+        padding: 0;
     }
 
     .expand-all {
@@ -54,15 +46,8 @@
 
 .maplibregl-ctrl-top-right {
     @media (max-width: 700px) {
-        left: 0;
 
         .maplibregl-ctrl.maplibregl-ctrl-tabs {
-            margin: 0;
-            width: 100%;
-
-            &.distraction-free {
-                transform: translateX(100%);
-            }
 
             .ll-tabs {
                 border-radius: 0;
