--- a/packages/pentatrion-fonts/fontello-lonlat.css
+++ b/packages/pentatrion-fonts/fontello-lonlat.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./dist/fontello-lonlat/fontello.eot?19679481');
-  src: url('./dist/fontello-lonlat/fontello.eot?19679481#iefix') format('embedded-opentype'),
-       url('./dist/fontello-lonlat/fontello.woff2?19679481') format('woff2'),
-       url('./dist/fontello-lonlat/fontello.woff?19679481') format('woff'),
-       url('./dist/fontello-lonlat/fontello.ttf?19679481') format('truetype'),
-       url('./dist/fontello-lonlat/fontello.svg?19679481#fontello') format('svg');
+  src: url('./dist/fontello-lonlat/fontello.eot?36948767');
+  src: url('./dist/fontello-lonlat/fontello.eot?36948767#iefix') format('embedded-opentype'),
+       url('./dist/fontello-lonlat/fontello.woff2?36948767') format('woff2'),
+       url('./dist/fontello-lonlat/fontello.woff?36948767') format('woff'),
+       url('./dist/fontello-lonlat/fontello.ttf?36948767') format('truetype'),
+       url('./dist/fontello-lonlat/fontello.svg?36948767#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./dist/fontello-lonlat/fontello.svg?19679481#fontello') format('svg');
+    src: url('./dist/fontello-lonlat/fontello.svg?36948767#fontello') format('svg');
   }
 }
 */
@@ -119,6 +119,7 @@
 .fe-unknown:before { content: '\e83e'; } /* '' */
 .fe-lonlat:before { content: '\e83f'; } /* '' */
 .fe-locate-off:before { content: '\e840'; } /* '' */
+.fe-geolocation-cog:before { content: '\e841'; } /* '' */
 .fe-vector:before { content: '\f045'; } /* '' */
 .fe-code:before { content: '\f121'; } /* '' */
 .fe-star-half:before { content: '\f123'; } /* '' */
