change color names

--- a/apps/front/src/features/geolocation/Geolocation.scss
+++ b/apps/front/src/features/geolocation/Geolocation.scss
@@ -2,7 +2,7 @@
     .content {
         transition: all .1s ease;
         border-radius: 50%;
-        background-color: var(--color-primary);
+        background-color: var(--color-yellow);
         border: 5px solid #333;
     }
 }
