--- a/packages/pentatrion-design/components/quick-settings/QuickSettings.scss
+++ b/packages/pentatrion-design/components/quick-settings/QuickSettings.scss
@@ -61,7 +61,7 @@
     }
 
     .separator {
-        background-color: var(--color-weak-50);
+        background-color: var(--color-gray-50);
         width: 50%;
         height: 4px;
         border-radius: 2px;
@@ -76,6 +76,6 @@
     //     margin-bottom: .5rem;
     //     margin-top: .5rem;
     //     border-radius: var(--border-radius-md);
-    //     border: 1px solid var(--color-weak-100);
+    //     border: 1px solid var(--color-gray-100);
     // }
 }
