--- a/packages/pentatrion-design/components/table/Table.scss
+++ b/packages/pentatrion-design/components/table/Table.scss
@@ -49,7 +49,7 @@
             display: block;
             font-weight: var(--font-weight-medium);
             font-size: .9rem;
-            color: var(--text-weak);
+            color: var(--text-gray);
         }
     }
 }
