--- a/packages/pentatrion-design/styles/themes/_light.scss
+++ b/packages/pentatrion-design/styles/themes/_light.scss
@@ -2,119 +2,119 @@
 .ui-light {
     --text-strong: #000000;
     --text-default: #444444;
-    --text-weak: #5c5c5c;
+    --text-gray: #5c5c5c;
     --text-hint: #767676;
     --text-disabled: #9a9a9a;
     --text-invert: #ffffff;
 
     --background-default: #ffffff;
     --background-light: #f2f2f2;
-    --background-weak: #ebebeb;
+    --background-gray: #ebebeb;
     --background-strong: #e6e6e6;
 
-    --background-invert: var(--color-weak-1000);
+    --background-invert: var(--color-gray-1000);
 
     --border-default: #d1cfcd;
-    --border-weak: #eae7e4;
+    --border-gray: #eae7e4;
 
 
-    --color-primary-100: #fffac7;
-    --color-primary-200: #fff58e;
-    --color-primary-300: #fff155;
-    --color-primary-400: #ffe822;
-    --color-primary-500: #ffe64b;
-    --color-primary: #ffe64b;
-    --color-primary-600: #f2d63e;
-    --color-primary-700: #e6c932;
-    --color-primary-800: #dba726;
-    --color-primary-900: #cf9c1a;
-    --color-primary-1000: #c3830e;
-    --color-primary-text: var(--text-default);
-    --color-primary-text-invert: var(--text-default);
+    --color-yellow-100: #fffac7;
+    --color-yellow-200: #fff58e;
+    --color-yellow-300: #fff155;
+    --color-yellow-400: #ffe822;
+    --color-yellow-500: #ffe64b;
+    --color-yellow: #ffe64b;
+    --color-yellow-600: #f2d63e;
+    --color-yellow-700: #e6c932;
+    --color-yellow-800: #dba726;
+    --color-yellow-900: #cf9c1a;
+    --color-yellow-1000: #c3830e;
+    --color-yellow-text: var(--text-default);
+    --color-yellow-text-invert: var(--text-default);
 
 
-    --color-success-100: #e8f5d4;
-    --color-success-200: #d1ebaa;
-    --color-success-300: #b9e181;
-    --color-success-400: #a2d757;
-    --color-success-500: #9ed24d;
-    --color-success: #9ed24d;
-    --color-success-600: #8ac842;
-    --color-success-700: #77bd37;
-    --color-success-800: #63b32d;
-    --color-success-900: #4f9e23;
-    --color-success-1000: #3b8918;
-    --color-success-text: var(--color-success-700);
-    --color-success-text-invert: var(--text-invert);
+    --color-green-100: #e8f5d4;
+    --color-green-200: #d1ebaa;
+    --color-green-300: #b9e181;
+    --color-green-400: #a2d757;
+    --color-green-500: #9ed24d;
+    --color-green: #9ed24d;
+    --color-green-600: #8ac842;
+    --color-green-700: #77bd37;
+    --color-green-800: #63b32d;
+    --color-green-900: #4f9e23;
+    --color-green-1000: #3b8918;
+    --color-green-text: var(--color-green-700);
+    --color-green-text-invert: var(--text-invert);
 
-    --color-info-100: #edf7ff;
-    --color-info-200: #cbe8ff;
-    --color-info-300: #a7d9ff;
-    --color-info-400: #83cbff;
-    --color-info-500: #5fbcff;
-    --color-info: #5fbcff;
-    --color-info-600: #4ba7e6;
-    --color-info-700: #3893c2;
-    --color-info-800: #257e9e;
-    --color-info-900: #136a7a;
-    --color-info-1000: #005656;
-    --color-info-text: var(--color-info-700);
-    --color-info-text-invert: var(--text-invert);
+    --color-blue-100: #edf7ff;
+    --color-blue-200: #cbe8ff;
+    --color-blue-300: #a7d9ff;
+    --color-blue-400: #83cbff;
+    --color-blue-500: #5fbcff;
+    --color-blue: #5fbcff;
+    --color-blue-600: #4ba7e6;
+    --color-blue-700: #3893c2;
+    --color-blue-800: #257e9e;
+    --color-blue-900: #136a7a;
+    --color-blue-1000: #005656;
+    --color-blue-text: var(--color-blue-700);
+    --color-blue-text-invert: var(--text-invert);
 
-    --color-warning-100: #fff4db;
-    --color-warning-200: #ffddb3;
-    --color-warning-300: #ffc68c;
-    --color-warning-400: #ffb064;
-    --color-warning-500: #ffa33d;
-    --color-warning: #ffa33d;
-    --color-warning-600: #e68c35;
-    --color-warning-700: #cc742e;
-    --color-warning-800: #b35b26;
-    --color-warning-900: #99531f;
-    --color-warning-1000: #803b17;
-    --color-warning-text: var(--color-warning-700);
-    --color-warning-text-invert: var(--text-invert);
+    --color-orange-100: #fff4db;
+    --color-orange-200: #ffddb3;
+    --color-orange-300: #ffc68c;
+    --color-orange-400: #ffb064;
+    --color-orange-500: #ffa33d;
+    --color-orange: #ffa33d;
+    --color-orange-600: #e68c35;
+    --color-orange-700: #cc742e;
+    --color-orange-800: #b35b26;
+    --color-orange-900: #99531f;
+    --color-orange-1000: #803b17;
+    --color-orange-text: var(--color-orange-700);
+    --color-orange-text-invert: var(--text-invert);
 
-    --color-danger-100: #ffdbdb;
-    --color-danger-200: #ffb7b7;
-    --color-danger-300: #ff9393;
-    --color-danger-400: #ff6f6f;
-    --color-danger-500: #ff4d4d;
-    --color-danger: #ff4d4d;
-    --color-danger-600: #e63e3e;
-    --color-danger-700: #cc3232;
-    --color-danger-800: #b32626;
-    --color-danger-900: #991a1a;
-    --color-danger-1000: #801414;
-    --color-danger-text: var(--color-danger-700);
-    --color-danger-text-invert: var(--text-invert);
+    --color-red-100: #ffdbdb;
+    --color-red-200: #ffb7b7;
+    --color-red-300: #ff9393;
+    --color-red-400: #ff6f6f;
+    --color-red-500: #ff4d4d;
+    --color-red: #ff4d4d;
+    --color-red-600: #e63e3e;
+    --color-red-700: #cc3232;
+    --color-red-800: #b32626;
+    --color-red-900: #991a1a;
+    --color-red-1000: #801414;
+    --color-red-text: var(--color-red-700);
+    --color-red-text-invert: var(--text-invert);
 
-    --color-weak-50: #f2f2f2;
-    --color-weak-100: #e4e4e4;
-    --color-weak-200: #dcdcdc;
-    --color-weak-300: #d4d4d4;
-    --color-weak-400: #cccccc;
-    --color-weak-500: #c0c0c0;
-    --color-weak: #c0c0c0;
-    --color-weak-600: #b4b4b4;
-    --color-weak-700: #a8a8a8;
-    --color-weak-800: #9c9c9c;
-    --color-weak-900: #909090;
-    --color-weak-1000: #8c8c8c;
-    --color-weak-text: var(--text-default);
-    --color-weak-text-invert: var(--text-default);
+    --color-gray-50: #f2f2f2;
+    --color-gray-100: #e4e4e4;
+    --color-gray-200: #dcdcdc;
+    --color-gray-300: #d4d4d4;
+    --color-gray-400: #cccccc;
+    --color-gray-500: #c0c0c0;
+    --color-gray: #c0c0c0;
+    --color-gray-600: #b4b4b4;
+    --color-gray-700: #a8a8a8;
+    --color-gray-800: #9c9c9c;
+    --color-gray-900: #909090;
+    --color-gray-1000: #8c8c8c;
+    --color-gray-text: var(--text-default);
+    --color-gray-text-invert: var(--text-default);
 
-    --color-grey-50: #ededed;
-    --color-grey-100: #dedede;
-    --color-grey-200: #bababa;
-    --color-grey-300: #999999;
-    --color-grey-400: #757575;
-    --color-grey-500: #545454;
-    --color-grey-600: #424242;
-    --color-grey-700: #333333;
-    --color-grey-800: #212121;
-    --color-grey-900: #121212;
-    --color-grey-950: #080808;
+    // --color-gray-50: #ededed;
+    // --color-gray-100: #dedede;
+    // --color-gray-200: #bababa;
+    // --color-gray-300: #999999;
+    // --color-gray-400: #757575;
+    // --color-gray-500: #545454;
+    // --color-gray-600: #424242;
+    // --color-gray-700: #333333;
+    // --color-gray-800: #212121;
+    // --color-gray-900: #121212;
+    // --color-gray-950: #080808;
 
     --scrollbar-thumb-color: rgb(0 0 0 / 0.35);
     --scrollbar-thumb-hover-color: rgb(0 0 0 / 0.5);
