--- a/apps/storybook/.storybook/storybook.scss
+++ b/apps/storybook/.storybook/storybook.scss
@@ -17,7 +17,7 @@
     margin-top: 1rem;
 
     &>div {
-        border: 1px solid var(--color-weak-100);
+        border: 1px solid var(--color-gray-100);
         border-radius: var(--border-radius-md);
         display: flex;
         flex-direction: column;
