--- a/packages/pentatrion-design/components/scroll/Scroll.scss
+++ b/packages/pentatrion-design/components/scroll/Scroll.scss
@@ -2,7 +2,7 @@
     position: relative;
 
     &.with-border {
-        border: 1px solid var(--border-weak);
+        border: 1px solid var(--border-gray);
     }
 
     .scroll-shadow {
