--- a/packages/pentatrion-design/styles/themes/_dark.scss
+++ b/packages/pentatrion-design/styles/themes/_dark.scss
@@ -1,17 +1,17 @@
 .ui-dark {
     --text-strong: white;
     --text-default: white;
-    --text-weak: #cccccc;
+    --text-gray: #cccccc;
     --text-hint: #999999;
     --text-disabled: #666666;
     --text-invert: #161616;
 
     --background-default: #0e0d12;
-    --background-weak: #1e1c24;
+    --background-gray: #1e1c24;
     --background-strong: #2c2934;
 
     --border-default: #dddddd;
-    --border-weak: #777777;
+    --border-gray: #777777;
 
     --scrollbar-thumb-color: rgb(255 255 255 / 0.2);
     --scrollbar-thumb-hover-color: rgb(255 255 255 / 0.5);
